--- a/Assignments/CSS/creatingCard.html
+++ b/Assignments/CSS/creatingCard.html
@@ -9,6 +9,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      gap: 10px;
       width: 100vw;
       height: 100vh;
     }
@@ -77,6 +78,57 @@
       <h1>29</h1>
       <p>JAN</p>
       <p>02408</p>
+      </div>
+      </div>
+      <div class="image-div">
+        <p>&copy;1998 Dragon Ball group</p>
+      </div>
+  </div>
+
+
+   <div class="card">
+    <div class="top">
+      <div class="price">
+        <h1>90C</h1>
+      </div>
+      <div class="date">
+      <h1>21</h1>
+      <p>DEC</p>
+      <p>02408</p>
+      </div>
+      </div>
+      <div class="image-div">
+        <p>&copy;1998 Dragon Ball group</p>
+      </div>
+  </div>
+
+
+   <div class="card">
+    <div class="top">
+      <div class="price">
+        <h1>70C</h1>
+      </div>
+      <div class="date">
+      <h1>11</h1>
+      <p>OCT</p>
+      <p>02444</p>
+      </div>
+      </div>
+      <div class="image-div">
+        <p>&copy;1998 Dragon Ball group</p>
+      </div>
+  </div>
+
+
+   <div class="card">
+    <div class="top">
+      <div class="price">
+        <h1>50C</h1>
+      </div>
+      <div class="date">
+      <h1>1</h1>
+      <p>SEP</p>
+      <p>02450</p>
       </div>
       </div>
       <div class="image-div">
