--- a/Assignments/CSS/creatingCard.html
+++ b/Assignments/CSS/creatingCard.html
@@ -20,6 +20,7 @@
       width: 350px;
       height: 600px;
       border: 3px solid black;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.30);
 
     }
     .top {
